--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								
 			});
 		
-		$("btnSubmit").click(function (){
+		$("#btnSubmit").click(function (){
 alert("收到提交按键");   			
 		    var account=document.getElementById("accMobile").value;
             var iccid=document.getElementById("chkIccid").value;
