--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ alert("收到提交按键");
             <div class="banner-info">
                 <div class="banner-info-left">
                     <h3>物联网卡信息查询</h3>
-                    <form name="chkUsim" id="chkUsim" action="servlet" method="post" onsubmit="return checkInput(); ">
+                    <form name="chkUsim" id="chkUsim" action="" method="post" onsubmit="return checkInput(); ">
                         <div class="panel panel-verydanger">
                             <div class="panel-heading">请输入您的电话号码 </div>
                             <div class="panel-body">
