--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     </script>
 <!-- end-smoth-scrolling -->
 <script type="text/javascript">
-		function checkInput(){
+/*		function checkInput(){
 alert("收到提交按键");   			
 		    var account=document.getElementById("accMobile").value;
             var iccid=document.getElementById("chkIccid").value;
-/*            var functionID=document.getElementById("selFunction").value;           */
+            var functionID=document.getElementById("selFunction").value;        
             var accountLen=document.getElementById("accMobile").value.length;
             var iccidLen=document.getElementById("chkIccid").value.length;
             
@@ -60,6 +60,12 @@ alert("收到提交按键");
                     }
                 });  
             }                  
+		} */
+		
+		function checkInput(){
+		
+		alert("进入函数checkInput");
+		
 		}
 </script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
