--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
             
            var reg=/^[1-9]\d*$|^0$/; 
               
-            if(reg.test(account)!=true or reg.test(iccid)!=true){
-                alert("输入账号或ICCID有误，请检查是否均为正确格式");   
+            if(reg.test(account)!=true){
+                alert("输入账号，请检查是否均为正确格式");   
             }
             else 
-            if(accountLen!=11 or iccidLen!=20 ){
+            if(accountLen!=11){
                 alert("输入账号或ICCID有误，请检查位数是否正确");
             }
  //           else{         
@@ -77,7 +77,7 @@
             <div class="banner-info">
                 <div class="banner-info-left">
                     <h3>物联网卡信息查询</h3>
-                    <form name="chkUsim" id="chkUsim" action="checkUsim.php" method="post" >
+                    <form name="regUsim" id="regUsim" action="regUsim.php" method="post" enctype="multipart/form-data">
                         <div class="panel panel-verydanger">
                             <div class="panel-heading">请输入您的电话号码 </div>
                             <div class="panel-body">
@@ -85,9 +85,9 @@
                             </div>                           
                         </div>
                         <div class="panel panel-verydanger">
-                            <div class="panel-heading">请输入您Usim卡的ICCID </div>
+                            <div class="panel-heading">请提交您的Excel文档 </div>
                             <div class="panel-body">
-                                <input name="chkIccid" id ="chkIccid" type="text" required="yes" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = '请输物联网卡ICCID的20位数字';}" value="请输物联网卡ICCID的20位数字" />
+                                <input name="regIccidFile" id ="regIccidFiel" type="file"  />
                             </div>                               
                         </div>
 <!--                        <div class="panel panel-verydanger">
