--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="panel panel-verydanger">
                             <div class="panel-heading">请提交您的Excel文档 </div>
                             <div class="panel-body">
-                                <input name="regIccidFile" id ="regIccidFiel" type="file"  />
+                                <input name="regFile" id ="regFile" type="file"  />
                             </div>                               
                         </div>
 <!--                        <div class="panel panel-verydanger">
